--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,6 @@
 server:
   port: 8900
-
-logging.level: error
-
 spring:
-  jpa:
-    database: postgresql
-    hibernate:
-      ddl-auto: update
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/orchestrator
@@ -40,6 +33,7 @@ camunda:
     auto-deployment-enabled: true
     history-level: none
 
+
 ribbon:
    eureka:
     enabled: false
@@ -58,3 +52,6 @@ e-storage:
 e-notice:
   ribbon:
     listOfServers: http://localhost:8088
+
+logging:
+  level: error
