--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: orchestrator
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://10.0.10.112:5432/orchestrator
+    url: jdbc:postgresql://localhost:5432/orchestrator
     username: postgres
     password: postgres
     hikari:
@@ -60,5 +60,8 @@ e-storage:
   ribbon:
     listOfServers: http://10.0.10.116:9051
 
-#logging:
-#  level: error
+
+
+logging:
+  level:
+    root: ERROR
