--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,23 @@
         <version>2.0.0.M5</version>
     </parent>
 
+    <!--<properties>-->
+        <!--<final-artifact-name>${project.artifactId}-${project.version}</final-artifact-name>-->
+        <!--<project.service.port>8080</project.service.port>-->
+        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <!--<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+        <!--<java.version>1.8</java.version>-->
+        <!--<junit-jupiter.version>5.0.0</junit-jupiter.version>-->
+        <!--<junit-platform.version>1.0.0</junit-platform.version>-->
+        <!--<maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>-->
+        <!--<jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>-->
+        <!--<maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>-->
+        <!--<maven-failsafe-plugin.version>2.19</maven-failsafe-plugin.version>-->
+        <!--<spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>-->
+        <!--<docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>-->
+        <!--<docker-registry>docker-registry.eprocurement.systems</docker-registry>-->
+        <!--<netty.version>4.1.17.Final</netty.version>-->
+    <!--</properties>-->
     <properties>
         <final-artifact-name>${project.artifactId}-${project.version}</final-artifact-name>
         <project.service.port>8080</project.service.port>
@@ -22,14 +39,16 @@
         <java.version>1.8</java.version>
         <junit-jupiter.version>5.0.0</junit-jupiter.version>
         <junit-platform.version>1.0.0</junit-platform.version>
+        <logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
         <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
         <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>2.19</maven-failsafe-plugin.version>
         <spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>
+        <netty.version>4.1.17.Final</netty.version>
+        <docker-image-profile></docker-image-profile>
         <docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
         <docker-registry>docker-registry.eprocurement.systems</docker-registry>
-        <netty.version>4.1.17.Final</netty.version>
     </properties>
 
     <dependencyManagement>
@@ -45,15 +64,11 @@
     </dependencyManagement>
 
     <dependencies>
-        <!--&lt;!&ndash;Spring Cloud&ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-starter-config</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-        <!--</dependency>-->
+        <!--Spring Cloud-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!--Web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -151,6 +166,32 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <!--Logging-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash.logback.encoder.version}</version>
+        </dependency>
         <!--Plugin-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -170,6 +211,18 @@
     </dependencies>
 
     <profiles>
+        <profile>
+            <id>deploy</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter-config</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
         <profile>
             <id>checkstyle</id>
             <build>
@@ -361,9 +414,9 @@
                     <images>
                         <image>
                             <registry>${docker-registry}</registry>
-                            <name>${docker-registry}/${project.artifactId}:${project.version}</name>
+                            <name>${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}</name>
                             <build>
-                                <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                                <dockerFileDir>${project.basedir}/src/main</dockerFileDir>
                                 <nocache/>
                                 <assembly>
                                     <descriptorRef>artifact</descriptorRef>
