--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     name: orchestrator
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://10.0.10.112:5432/orchestrator
+    url: jdbc:postgresql://localhost:5432/orchestrator
     username: postgres
     password: postgres
     hikari:
@@ -16,10 +16,10 @@ spring:
       pool-name: orchestrator-pool
 
 cassandra:
-  contact-points: 10.0.10.104,10.0.10.105,10.0.10.106
+  contact-points: 10.0.20.104,10.0.20.105,10.0.20.106
   keyspace-name: ocds
   username: caclient
-  password: brT4Kn27RQs
+  password: 6AH7vbrkMWnfK
 
 eureka:
   client:
