--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     name: orchestrator
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/orchestrator
+    url: jdbc:postgresql://10.0.20.112:5432/orchestrator
     username: postgres
     password: postgres
     hikari:
