--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.procurement</groupId>
     <artifactId>orchestrator</artifactId>
-    <version>18.06.1</version>
+    <version>01.02.03</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -30,7 +30,8 @@
         <spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>
         <netty.version>4.1.17.Final</netty.version>
         <docker-image-profile></docker-image-profile>
-        <docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
+        <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
+        <docker-image-profile>-swarm</docker-image-profile>
         <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
     </properties>
 
@@ -47,12 +48,7 @@
     </dependencyManagement>
 
     <dependencies>
-        <!--Spring Cloud-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <!--Web-->
+        <!--Spring-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
