--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.procurement</groupId>
-    <artifactId>orchestrator</artifactId>
-    <version>01.02.03</version>
+    <artifactId>bpe</artifactId>
+    <version>1.2.3</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
