--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,7 +74,7 @@ e-mdm:
     listOfServers: http://10.0.20.125:9161
 
 logging:
-  level:
-    root: WARN
+#  level:
+#    root: WARN
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n"
