--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,6 +70,9 @@ e-evaluation:
 e-contracting:
   ribbon:
     listOfServers: http://10.0.20.125:9151
+e-regulation:
+  ribbon:
+    listOfServers: http://10.0.20.125:9201
 e-mdm:
   ribbon:
     listOfServers: http://10.0.20.125:9161
