--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
         <spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>
         <netty.version>4.1.17.Final</netty.version>
         <!--Docker-->
-        <docker-registry>docker.io/eprocurementsystems</docker-registry>
-        <!--<docker-registry>docker-registry.eprocurement.systems</docker-registry>-->
+        <!--<docker-registry>docker.io/eprocurementsystems</docker-registry>-->
+        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
         <docker-image-profile></docker-image-profile>
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
     </properties>
@@ -172,13 +172,36 @@
                     <include>processes/</include>
                     <include>bootstrap.yml</include>
                     <include>banner.txt</include>
-                  </includes>
+                    <include>git.properties</include>
+                </includes>
             </resource>
         </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <configuration>
+                    <includeOnlyProperties>
+                        <includeOnlyProperty>^git.branch$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.build.host$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.build.time$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.commit.id$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.commit.user.email$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.tags$</includeOnlyProperty>
+                    </includeOnlyProperties>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
@@ -188,8 +211,7 @@
                     <images>
                         <image>
                             <registry>${docker-registry}</registry>
-                            <name>
-                                ${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}
+                            <name>${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}.${git.commit.id.abbrev}
                             </name>
                             <build>
                                 <dockerFileDir>${project.basedir}/src/main</dockerFileDir>
