--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <netty.version>4.1.17.Final</netty.version>
         <!--Docker-->
         <!--<docker-registry>docker.io/eprocurementsystems</docker-registry>-->
-        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
+        <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
         <docker-image-profile></docker-image-profile>
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
     </properties>
