--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,9 @@
         <spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>
         <netty.version>4.1.17.Final</netty.version>
         <!--Docker-->
+        <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
         <docker-registry>docker.io/eprocurementsystems</docker-registry>
         <!--<docker-registry>docker-registry.eprocurement.systems</docker-registry>-->
-        <docker-image-profile></docker-image-profile>
-        <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -213,7 +212,7 @@
                             <registry>${docker-registry}</registry>
                             <!--suppress UnresolvedMavenProperty -->
                             <name>
-                                ${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}.${git.commit.id.abbrev}
+                                ${docker-registry}/${project.artifactId}:${project.version}.${git.commit.id.abbrev}
                             </name>
                             <build>
                                 <dockerFileDir>${project.basedir}/src/main</dockerFileDir>
